[gd_scene load_steps=4 format=3 uid="uid://bvphfig2ptm8j"]

[ext_resource type="Script" uid="uid://cpkfyjnqnwutm" path="res://Scripts/PauseMenu.gd" id="1_lj4oq"]
[ext_resource type="PackedScene" uid="uid://803rb821f540" path="res://Scenes/OptionsMenu.tscn" id="2_qwhev"]
[ext_resource type="PackedScene" uid="uid://byy2lyg2d1wor" path="res://Scenes/StatsPage.tscn" id="3_5w4ur"]

[node name="PauseMenu" type="CanvasLayer"]
script = ExtResource("1_lj4oq")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5882353)

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainButtons" type="VBoxContainer" parent="CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 20

[node name="ContinueButton" type="Button" parent="CenterContainer/MainButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Continue"

[node name="StatsButton" type="Button" parent="CenterContainer/MainButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Stats"

[node name="OptionsButton" type="Button" parent="CenterContainer/MainButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Options"

[node name="SaveAndExitButton" type="Button" parent="CenterContainer/MainButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Save and exit"

[node name="OptionsMenu" parent="." instance=ExtResource("2_qwhev")]
unique_name_in_owner = true
visible = false

[node name="StatsPage" parent="." instance=ExtResource("3_5w4ur")]
unique_name_in_owner = true
